infra/k8s/base/step-ca/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: step-ca
  labels:
    app.kubernetes.io/name: step-ca
spec:
  selector:
    app.kubernetes.io/name: step-ca
  ports:
    - name: https
      port: 9000
      targetPort: https
